Added generate time logging and sanity check. Updated README. Made Docker not depend on tests/ folder.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+third-party/binaryninja/BinaryNinja.zip
+third-party/binaryninja/license.dat
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
