Update dockerfile to 18.04. Copy src to /src. Update README. Allow multiple tags.

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -10,5 +10,8 @@ RUN apt-get update -y && apt-get install -y jq tree curl wget vim man
 WORKDIR /root/.binaryninja
 COPY ./third-party/binaryninja/license.dat /root/.binaryninja/license.dat
 
+WORKDIR /
+COPY ./src ./src
+
 WORKDIR /processor
 ENTRYPOINT ["/bin/bash"]
