Updated feature extraction to include instruction histogram, dominator signature, and vertex & edge taxonomy histogram. Added additional cli components. Working cli using individual hash json files, todo switch to database.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ binary_data/
 fuzzy_hashing_papers/
 profile_code.py
 .gitignore
+*.hash.json
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
