quicksave (broken). Classes, db, feature extraction logic implemented, main application not built.

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ fuzzy_hashing_papers/
 profile_code.py
 .gitignore
 *.hash.json
+*.sqlite3
+.vscode/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -117,3 +119,5 @@ venv.bak/
 tests/
 
 .DS_Store
+/hashashin/testing.py
+/hashashin/pycrunch-recordings
