working docker image for pilot integration

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,13 @@
 third-party/binaryninja/BinaryNinja.zip
 third-party/binaryninja/license.dat
+*license.dat
 
 binary_data/
 fuzzy_hashing_papers/
 profile_code.py
 .gitignore
 **.db
+**.bak
 .vscode/
 
 # Byte-compiled / optimized / DLL files
